--- a/TKV2026_soubory/sheet010.htm
+++ b/TKV2026_soubory/sheet010.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10797 style='border-collapse:
- collapse;table-layout:fixed;width:8114pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10896 style='border-collapse:
+ collapse;table-layout:fixed;width:8188pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -192,8 +192,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
+ width:134pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -359,7 +359,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1085,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>18</td>
+  <td class=xl164 style='border-left:none'>19</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1214,13 +1214,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>17300</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>18600</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,0</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,1</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,13 +1349,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>15200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>16700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>15</td>
+  <td class=xl164 style='border-top:none;border-left:none'>16</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1573,10 +1573,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
-  [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>22</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1799,9 +1798,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9500</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9800</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2022,9 +2021,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>22</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9600</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,8 +2158,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>21</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7850</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>23</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8750</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2505,15 +2505,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>4600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>5</td>
+  <td class=xl82 style='border-top:none;border-left:none'>6</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2620,9 +2620,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2788,9 +2790,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2957,9 +2961,11 @@ else
   [CZE069712]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3009,9 +3015,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>500</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3125,9 +3131,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3177,9 +3185,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3292,9 +3300,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3447,9 +3457,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3588,9 +3600,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3721,9 +3735,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14363,7 +14379,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=179 style='width:134pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
