--- a/TKV2026_soubory/sheet019.htm
+++ b/TKV2026_soubory/sheet019.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10713 style='border-collapse:
- collapse;table-layout:fixed;width:8063pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10818 style='border-collapse:
+ collapse;table-layout:fixed;width:8142pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
@@ -193,8 +193,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
+ width:139pt'>
  <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
  width:77pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -360,7 +360,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=185 style='width:139pt'></td>
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1086,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>18</td>
+  <td class=xl164 style='border-left:none'>19</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1215,13 +1215,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,6</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,8</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1350,13 +1350,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>24</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13200</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>14</td>
+  <td class=xl164 style='border-top:none;border-left:none'>15</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1799,10 +1799,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
-  [CZE084601]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>24</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10000</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2023,10 +2023,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
-  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
+  [CZE084601]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2161,8 +2161,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
   [CZE054627]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>24</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8200</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2508,15 +2508,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5600</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Barták Martin [CZE084602]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  <td class=xl82 style='border-top:none;border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2620,9 +2620,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2673,8 +2675,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2792,9 +2794,11 @@ else
   [CZE054627]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2844,10 +2848,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
-  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4500</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2963,9 +2966,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3017,8 +3022,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Pokorný Martin
   [CZE082924]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3600</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3133,9 +3138,12 @@ else
   [CZE084601]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3185,9 +3193,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
+  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3304,9 +3313,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Černý Ondřej [CZE088314]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3356,9 +3367,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kulhánek Jiří [CZE085042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Černý Ondřej [CZE088314]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3466,9 +3477,11 @@ else
   [CZE082924]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3518,10 +3531,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
-  [CZE056477]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kulhánek Jiří [CZE085042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3626,9 +3638,12 @@ else
   [CZE080084]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
+  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3678,9 +3693,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Minster Marek [CZE026339]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
+  [CZE056477]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3768,9 +3784,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pokorný Martin
+  [CZE082924]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3820,9 +3839,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>15</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Černý Ondřej [CZE088314]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Minster Marek [CZE026339]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3905,9 +3924,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14414,7 +14435,7 @@ else
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=185 style='width:139pt'></td>
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
